--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -27,14 +27,15 @@ theme:
   palette:
     - media: "(prefers-color-scheme: light)"
       scheme: default
-      primary: white
-      accent: indigo
+      primary: amber
+      accent: black
       toggle:
         icon: material/brightness-7
         name: Switch to dark mode
     - media: "(prefers-color-scheme: dark)"
       scheme: slate
       primary: black
+      accent: indigo
       toggle:
         icon: material/brightness-4
         name: Switch to light mode
