Final Assigment updates

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -12,7 +12,11 @@ nav:
     - Module IV: Modules/Module IV.md
     - Module V: Modules/Module V.md
   - Assignments: 
+    - Final Assignment: Assignment/FINAL Assignment.md
     - Assingment 1: Assignment/Assignment I.md
+    - Assingment 2: Assignment/Assignment II.md
+    - Assingment 3: Assignment/Assignment III.md
+    - Assingment 4: Assignment/Assignment IV.md
   - About:
     - License: license.md
     - Citing: citing.md
