--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -10,7 +10,7 @@ nav:
     - Module II: Modules/Module II.md
     - Module III: Modules/Module III.md
     - Module IV: Modules/Module IV.md
-    # - Module V: Modules/Module V.md
+    - Module V: Modules/Module V.md
   - Assignments: 
     
     - Assingment 1: Assignment/Assignment I.md
