--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -11,15 +11,9 @@ nav:
     - Module III: Modules/Module III.md
     - Module IV: Modules/Module IV.md
     - Module V: Modules/Module V.md
-  - Assignments: 
-    - Assingment 1: Assignment/Assignment I.md
-    - Assingment 2: Assignment/Assignment II.md
-    - Assingment 3: Assignment/Assignment III.md
-    # - Assingment 4: Assignment/Assignment IV.md
-    # - Assingment 5: Assignment/Assignment V.md
-    - Final Assignment: Assignment/FINAL Assignment.md
-    - Tutorials:
-      - Tutorial: Assignment/Intro to Blender.md
+  - Tutorials: 
+      - Tutorial 1: Assignment/Intro to Blender.md
+      - Tutorial 2: Assignment/Assignment 1.md
   - About:
     - License: license.md
     - Citing: citing.md
