--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -14,6 +14,8 @@ nav:
   - Tutorials: 
       - Tutorial 1: Assignment/Intro to Blender.md
       - Tutorial 2: Assignment/Assignment 1.md
+      - Tutorial 3: Assignment/Tutorial 3.md
+  - Final Assignment: Assignment/FINAL Assignment.md
   - About:
     - License: license.md
     - Citing: citing.md
