attempt image fix

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -17,8 +17,7 @@ nav:
       - Tutorial 3: Assignment/Tutorial 3.md
   - Final Assignment: Assignment/FINAL Assignment.md
   - About:
-    - License: license.md
-    - Citing: citing.md
+    - License: license
 
 
 
