--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -12,7 +12,7 @@ nav:
     - Module IV: Modules/Module IV.md
     - Module V: Modules/Module V.md
   - Tutorials: 
-      - Tutorial 1: Assignment/Intro to Blender.md
+      - Tutorial 1: Assignment/Intro to blender.md
       - Tutorial 2: Assignment/Assignment 1.md
       - Tutorial 3: Assignment/Tutorial 3.md
   - Final Assignment: Assignment/FINAL Assignment.md
