--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -13,7 +13,7 @@ nav:
     - Module V: Modules/Module V.md
   - Tutorials: 
       - Tutorial 1: Assignment/Intro to blender.md
-      - Tutorial 2: Assignment/Assignment 1.md
+      - Tutorial 2: Assignment/Assignment I.md
       - Tutorial 3: Assignment/Tutorial 3.md
   - Final Assignment: Assignment/FINAL Assignment.md
   - About:
